src/test/ui/error-codes/E0277.stderr
error[E0277]: the size for value values of type `[u8]` cannot be known at compilation time
  --> $DIR/E0277.rs:23:6
   |
LL | fn f(p: Path) { }
   |      ^ doesn't have a size known at compile-time
   |
   = help: within `std::path::Path`, the trait `std::marker::Sized` is not implemented for `[u8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: required because it appears within the type `std::path::Path`
   = note: all local variables must have a statically known size

error[E0277]: the trait bound `i32: Foo` is not satisfied
  --> $DIR/E0277.rs:27:5
   |
LL |     some_func(5i32);
   |     ^^^^^^^^^ the trait `Foo` is not implemented for `i32`
   |
note: required by `some_func`
  --> $DIR/E0277.rs:19:1
   |
LL | fn some_func<T: Foo>(foo: T) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
